# DropRead

./: .dockerignore  .gitignore  Caddyfile  Dockerfile  Dockerfile.base  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 1ff39bd73ec2_make_next_delivery_null_remove_default.py  27bb71a41a0b_add_user_preferences.py  44f2df2f0f71_add_current_step_to_digests.py  6b72b018a207_create_users_table.py  8ca818b18062_add_cascade_delete_to_digests_user_id.py  990a57ce477c_add_digest_cache.py  a9fa06e421a3_add_auto_digest_to_digests.py  b17a7a103d2d_add_delivery_day_to_users.py  c4ac08272d18_decouple_digest_cache.py
frontend/: .gitignore  dashboard.html  digest.html  final_read.html  index.html  output.css  package-lock.json  package.json  profile.html
frontend/partials/: status_badge.html
nginx/: nginx.conf
src/ai_newsletter/: __main__.py  app.py
src/ai_newsletter/core/: config.py  llm.py
src/ai_newsletter/database/: engine.py  schemas.py
src/ai_newsletter/models/: models.py
src/ai_newsletter/orchestration/: graph.py  prompts.py  runner.py  state_manager.py  states.py
src/ai_newsletter/orchestration/nodes/: crawl.py  query.py  (+4 more)
src/ai_newsletter/router/: auth.py  digests.py  pages.py  pipeline.py  user.py
src/ai_newsletter/services/: auth.py  cache.py  digest.py  digest_email.py  digest_mail.py  scheduler.py
src/ai_newsletter/utils/: csrf.py  dependencies.py  limiter.py  logging_config.py  metrics.py  shared.py  ssrf.py
tests/: conftest.py  test_auth.py  test_dropread.py
